# intelligent-cv-screening

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
config/: odoo.conf
src/intelligent_cv_screening/: crew.py  main.py
src/intelligent_cv_screening/config/: agents.yaml  tasks.yaml
src/intelligent_cv_screening/model/: final_decision_model.py
src/intelligent_cv_screening/tools/: pdf_reader.py
src/intelligent_cv_screening/utils/: odoo_manager.py  utils.py
